; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_kpi_vfs.c_vfs_context_kernel.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_kpi_vfs.c_vfs_context_kernel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, i32* }
%struct.TYPE_7__ = type { i64 }

@kerncontext = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@NOCRED = common dso_local global i64 0, align 8
@kernproc = common dso_local global %struct.TYPE_7__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_6__* @vfs_context_kernel() #0 {
  %1 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @kerncontext, i32 0, i32 0), align 8
  %2 = load i64, i64* @NOCRED, align 8
  %3 = icmp eq i64 %1, %2
  br i1 %3, label %4, label %8

4:                                                ; preds = %0
  %5 = load %struct.TYPE_7__*, %struct.TYPE_7__** @kernproc, align 8
  %6 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  store i64 %7, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @kerncontext, i32 0, i32 0), align 8
  br label %8

8:                                                ; preds = %4, %0
  %9 = load i32*, i32** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @kerncontext, i32 0, i32 1), align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %8
  %12 = load %struct.TYPE_7__*, %struct.TYPE_7__** @kernproc, align 8
  %13 = call i32* @proc_thread(%struct.TYPE_7__* %12)
  store i32* %13, i32** getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @kerncontext, i32 0, i32 1), align 8
  br label %14

14:                                               ; preds = %11, %8
  ret %struct.TYPE_6__* @kerncontext
}

declare dso_local i32* @proc_thread(%struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
